@@ -32,6 +32,7 @@
 			"extlibs/momentjs/moment.js",
 			"extlibs/numeraljs/numeral.js",
 			"classes/Hyperiums7.js",
+			"scripts/contentscripts/cache.js",
 			"scripts/contentscripts/events.js",
 			"scripts/contentscripts/ticks.js",
 			"scripts/contentscripts/menu.js",
