@@ -1,0 +1,25 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Hyperiums Extension - Cache</title>
+		<script src="/extlibs/jquery/jquery.js"></script>
+		<script srC="/extlibs/momentjs/moment.js"></script>
+		<link rel="stylesheet/less" type="text/css" href="/styles/pages.less">
+		<script src="/extlibs/less/less.js"></script>
+		<script src="/scripts/pages/cache.js"></script>
+	</head>
+	<body>
+		<table>
+			<thead>
+				<tr>
+					<th>URL</th>
+					<th class="fixed-width">Date</th>
+				</tr>
+			</thead>
+			<tbody id="cache">
+			</tbody>
+		</table>
+	</body>
+</html>
+
