@@ -1,0 +1,6 @@
+chrome.runtime.sendMessage({
+	request: 'updateAjaxCache',
+	url: location.href,
+	data: document.documentElement.outerHTML
+});
+
